Write --sun-misc-unsafe-memory-access=allow only for a JVM measured to accept it
JDK 26 refuses the Unsafe access an enum append needs unless started
with the flag; JDK 24 and 25 warn without it. The option exists from
JDK 23, and SapMachine 21 fails to start on it: Unrecognized option
... Could not create the Java Virtual Machine. So the plugin writes it
gated on real version detection, never a guess.

Hybris installs read the server's actual JDK from the generated
wrapper.conf's wrapper.java.command (the templates resolve it from
java.home at ant time, verified on a 2211-jdk21 project) and that
JDK's release file; no generated wrapper config means no answer and no
flag. Run configurations gate on params.jdk, the JVM the configuration
actually starts, which may be an alternate JRE rather than the project
SDK. PlatformJdkFeatureTest holds the version parsing and the
no-answer-no-flag rule.